# HostaAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: code_agent.py  custom_env.py  daemon_webhook.py  git_reviewer.py  research_agent.py  sql_agent.py
examples/agents/: code.py  git.py  orchestrator.py  research.py  sql.py
examples/tools/: __init__.py  subagent.py
hostaagent/: __init__.py  cli.py  config.py  core.py  debug.py  driver.py  environment.py  events.py  permissions.py  session.py  testing.py  theme.py  types.py  wrappers.py
hostaagent/driver/: __init__.py  base.py
hostaagent/driver/cli/: __init__.py  app.py  debug.py  render.py  repl.py  stream.py  theme.py  wizard.py
hostaagent/environment/: __init__.py  base.py  http.py  local.py  multi.py
tests/: conftest.py  mockmodel.py  test_cli.py  test_config.py  test_core.py  test_driver.py  test_environment.py  test_http_env.py  test_multienv.py  test_permissions.py  test_session.py  test_subagent.py  test_testing.py  test_types.py  test_wrappers.py
