[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hostaagent"
version = "0.1.0"
description = "Claude Code in 50 lines you can fork. A minimalist Python agent framework."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Léandre Ramos"}, { name = "Emmanuel Batt"}]
keywords = ["agent", "llm", "react", "tools", "openhosta", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "openhosta @ git+https://github.com/hand-e-fr/OpenHosta.git@tool_calling",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "questionary>=2.0",
    "python-dotenv>=1.0",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
hosta = "hostaagent.driver.cli:main"

[project.urls]
Repository = "https://github.com/hand-e-fr/HostaAgent"
Issues = "https://github.com/hand-e-fr/HostaAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["hostaagent"]

[tool.hatch.metadata]
allow-direct-references = true   # required for the git+https openhosta dependency

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# __init__ sets an env var before importing OpenHosta (must run first).
"hostaagent/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
# `@tool` is re-exported from the (untyped) OpenHosta dependency; decorating with
# it would otherwise trip strict's untyped-decorator check.
disallow_untyped_decorators = false

# OpenHosta ships no type stubs yet; don't fail on its untyped imports.
[[tool.mypy.overrides]]
module = "OpenHosta.*"
ignore_missing_imports = true
follow_imports = "skip"

# tomllib (3.11+) / tomli (3.10 backport) — treat as untyped to avoid stub noise.
[[tool.mypy.overrides]]
module = ["tomllib", "tomli"]
ignore_missing_imports = true

# CLI deps without shipped stubs.
[[tool.mypy.overrides]]
module = ["questionary", "questionary.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
